--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           node-version: '14.x'
           registry-url: 'https://npm.pkg.github.com'
-          scope: '@tomchen'
+          scope: '@michaelpautov'
       - run: npm run addscope
       - name: Publish to GitHub Packages
         run: npm publish
