--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "example-lifi-types",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Types for lifi projects",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
+  "files": ["dist"],
   "scripts": {
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
@@ -12,6 +13,7 @@
     "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
     "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
     "build:umd": "node tools/cleanup umd && webpack --config config/webpack.config.js",
+    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
     "clean": "node tools/cleanup",
     "package": "npm run build && npm pack",
     "test": "jest --no-cache --runInBand",
