--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "example-lifi-types",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Types for lifi projects",
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.ts",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
   "scripts": {
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
