--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "example-lifi-types",
-  "version": "0.1.8",
+  "name": "@michaelpautov/example-typescript-package",
+  "version": "0.1.9",
   "description": "Types for lifi projects",
-  "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:umd && npm run build:types",
-    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
-    "build:umd": "node tools/cleanup umd && webpack --config config/webpack.config.js",
-    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
+    "build": "npm run build:types",
+    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.json",
     "clean": "node tools/cleanup",
     "package": "npm run build && npm pack",
     "test": "jest --no-cache --runInBand",
     "test:cov": "jest --coverage --no-cache --runInBand",
-    "addscope": "node tools/packagejson name @tomchen/example-typescript-package"
+    "addscope": "node tools/packagejson name @michaelpautov/example-typescript-package"
   },
   "files": [
     "dist"
